--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,5 @@
-title: Mifa Jekyll
-description: Mifa is a theme for GitHub Pages.
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
 show_downloads: true
 google_analytics:
-theme: mifa-jekyll
-
-plugins:
-  - jekyll-seo-tag
-  - jekyll-readme-index
+theme: jekyll-theme-cayman
