--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ include: gallery.html
 
 images: 
     - title: 爱人
-      src: 'https://photo.tuchong.com/2301626/ft640/209322359.jpg'}
+      src: 'https://photo.tuchong.com/2301626/ft640/209322359.jpg'
     - title: 爱人
-      src: 'https://photo.tuchong.com/2301626/ft640/209322359.jpg'}
+      src: 'https://photo.tuchong.com/2301626/ft640/209322359.jpg'
     - title: 爱人
-      src: 'https://photo.tuchong.com/2301626/ft640/209322359.jpg'}
+      src: 'https://photo.tuchong.com/2301626/ft640/209322359.jpg'
 
